--- a/favorites.html
+++ b/favorites.html
@@ -13,7 +13,7 @@
         <li>Johnny English Reborn</li>
         <li>Johnny English strikes again</li>
         <li>Mr. Bean goes on Holiday</li>
-        <li>Madagascar</li>
+        <li>The Lion King</li>
     </ol>
     <h3>Samantha's favourite Songs (best to worst)</h3>
     <ol>
