--- a/background.html
+++ b/background.html
@@ -4,9 +4,9 @@
     <title>My Background</title>
     <link rel="stylesheet" href="./Styles/styles.css">
 </head>
-
+<h1 class="center" >My Family And My Youth </h1>
 <body>
-    <h1>My Family and My youth</h1>
+
     <h3>Ma famille</h3>
     <dl>
         <dt>Sarah</dt>
@@ -30,4 +30,8 @@
         <li><a href="schedule.html">Schedule</a></li>
         <li><a href="favorites.html">Favoites</a></li>
     </ul>
-</nav></html>
+</nav>
+<div id="footer">
+  &copy; Copywright 2019 Samantha Incorparation ;). All Rights Reserved.
+</div>
+</html>
