--- a/hobbies.html
+++ b/hobbies.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h3>Samantha and her Hobbies</h3>
+    <h1 class="center" >My Hobbies (:</h1>
     <ul>
         <li>I play varsity water polo at San Rafael High and I am the goalie, basically meaning i block really fast shots with my face.</li>
         <li>I am on the San Rafael High mountion biking team. I am not a very good mountion biker but I enjoy going to races and other team activitys</li>
@@ -22,4 +22,8 @@
         <li><a href="schedule.html">Schedule</a></li>
         <li><a href="favorites.html">Favoites</a></li>
     </ul>
-</nav></html>
+</nav>
+<div id="footer">
+  &copy; Copywright 2019 Samantha Incorparation ;). All Rights Reserved.
+</div>
+</html>
