--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1> Hello everybody, I am Samantha, welcome to my blog :) </h1>
+    <h1 class= "center">Hello Everyone, Welcome to my Blog</h1>
     <h2>You, yes you, might ask, who is Samantha Gorton?</h2>
     <h3>Samantha and her loudness</h3>
     <p>Samantha Gorton, Sam, a VERY loud person who is impossible to get to shut up. If I were told to stop laughing I would stop, sit still for a moment, and burst out into an even louder more obnoxious laugh than before. See I like to live in the moment and if I am told stop living in the moment, I will not like it and continue to laugh in your face.<br />
@@ -27,4 +27,8 @@
         <li><a href="schedule.html">Schedule</a></li>
         <li><a href="favorites.html">Favoites</a></li>
     </ul>
-</nav></html>
+</nav>
+<div id="footer">
+  &copy; Copywright 2019 Samantha Incorparation ;). All Rights Reserved.
+</div>
+</html>
