--- a/favorites.html
+++ b/favorites.html
@@ -6,40 +6,47 @@
 </head>
 
 <body>
-    <h1>My Favorites</h1>
-    <h3>Samantha's top 5 movies (best to worst)</h3>
-    <ol>
-        <li>Johnny English </li>
+    <h1 class="center" >Favorites</h1>
+    <h3 class="center" >Samantha's top 5 movies (best to worst)</h3>
+    <ol class="center">
+        <li class="center" >Johnny English </li>
         <li>Johnny English Reborn</li>
         <li>Johnny English strikes again</li>
         <li>Mr. Bean goes on Holiday</li>
         <li>The Lion King</li>
     </ol>
-    <h3>Samantha's favourite Songs (best to worst)</h3>
-    <ol>
+    <h3 class="center" >Samantha's favourite Songs (best to worst)</h3>
+    <ol class="center" >
         <li>Hide & Seek ~ Michael Seyer</li>
         <li>Xanax Blues ~ Michael Seyer</li>
         <li>Play Me! ~ Michael Seyer</li>
         <li>Making Chit Chat With a Stranger at a Dinner Party ~ Michael Seyer</li>
         <li>The Most Beautiful Painting in the World ~ Michael Seyer</li>
     </ol>
-    <h3>Samantha's Top Five books (best to worst)</h3>
-    <ol>
-        <li>Talking with Psychopaths an Savages Beyond Evil ~ Christopher Berry-Dee</li>
+    <h3 class="center" >Samantha's Top Five books (best to worst)</h3>
+    <div class="center_text">
+  <h5 class="center" > Please Note Samantha Does NOT Read books</h5>
+    </div>
+    <ol class="center" >
+        <li class="center" >Talking with Psychopaths an Savages Beyond Evil ~ Christopher Berry-Dee</li>
         <li>The Catcher In the Rye ~ J.D. Salinger</li>
         <li>The Hate You Give ~ Angie Thomas
         <li>Counting by Sevens ~ Holly Goldberg Sloan</li>
         <li>Wonder ~ R.J. Palacio</li>
     </ol>
-    <h3>Samantha's Favourite Quote</h3>
-    <blockquote>"heehee"</blockquote>
-    <p>This quote by Michael Jackson, I quote daily ;-)</p>
+    <h3 class="center" >Samantha's Favourite Quote</h3>
+    <blockquote class="center" >"heehee"</blockquote>
+    <p class="center" >This quote by Michael Jackson, I quote daily ;-)</p>
 </body>
 <nav class="menu">
-    <ul>
+    <ul class="center" >
         <li><a href="Index.html">Home</a></li>
         <li><a href="background.html">Backround</a></li>
         <li><a href="hobbies.html">Hobbies</a></li>
         <li><a href="schedule.html">Schedule</a></li>
     </ul>
-</nav></html>
+</nav>
+<div id="footer">
+  &copy; Copywright 2019 Samantha Incorparation ;). All Rights Reserved.
+</div>
+</html>
