--- a/schedule.html
+++ b/schedule.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <p>My Schudule</p>
+    <h1 class="center" >My Schedule</h1>
     <table>
         <colgroup span="My Schedule"></colgroup>
         <tr>
@@ -58,4 +58,8 @@
         <li><a href="hobbies.html">Hobbies</a></li>
         <li><a href="favorites.html">Favoites</a></li>
     </ul>
-</nav></html>
+</nav>
+<div id="footer">
+  &copy; Copywright 2019 Samantha Incorparation ;). All Rights Reserved.
+</div>
+</html>
