--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,8 @@
         <br><q>Samantha always likes being the center of attention</q> - Izzy</br>
         <br>This one time Samantha was bored so she ate half a cantaloupe at 3:30 am, then proceeded to make a tinfoil tellitubby hat. The next night she became bored again so she ate a raw onion like an apple.</br>
         <br><q> Samantha is quite fond of onions</q> - Izzy</br>
-
+  <img class=img1 src="images/me_on_the_pooldeck.png" />
+  <img class=img2 src="images/my_parking.png" />
 </body>
 <nav class="menu">
     <ul>
