centered table for schedule and teat has shadow all around

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1 class= "center">Hello Everyone, Welcome to my Blog</h1>
+    <h1 class="center">Hello Everyone, Welcome to my Blog</h1>
     <h2>You, yes you, might ask, who is Samantha Gorton?</h2>
     <h3>Samantha and her loudness</h3>
     <p>Samantha Gorton, Sam, a VERY loud person who is impossible to get to shut up. If I were told to stop laughing I would stop, sit still for a moment, and burst out into an even louder more obnoxious laugh than before. See I like to live in the moment and if I am told stop living in the moment, I will not like it and continue to laugh in your face.<br />
@@ -18,8 +18,8 @@
         <br><q>Samantha always likes being the center of attention</q> - Izzy</br>
         <br>This one time Samantha was bored so she ate half a cantaloupe at 3:30 am, then proceeded to make a tinfoil tellitubby hat. The next night she became bored again so she ate a raw onion like an apple.</br>
         <br><q> Samantha is quite fond of onions</q> - Izzy</br>
-  <img class=img1 src="images/me_on_the_pooldeck.png" />
-  <img class=img2 src="images/my_parking.png" />
+        <img class=img1 class="crop" src="images/me_on_the_pooldeck.png" />
+        <img class=img2 src="images/my_parking.png" />
 </body>
 <nav class="menu">
     <ul>
@@ -30,6 +30,7 @@
     </ul>
 </nav>
 <div id="footer">
-  &copy; Copywright 2019 Samantha Incorparation ;). All Rights Reserved.
+    &copy; Copywright 2019 Samantha Incorparation ;). All Rights Reserved.
 </div>
+
 </html>
