finished wesite, end of first quarter

--- a/Index.html
+++ b/Index.html
@@ -8,25 +8,37 @@
 
 <body>
     <h1 class="center">Hello Everyone, Welcome to my Blog</h1>
-    <h2>You, yes you, might ask, who is Samantha Gorton?</h2>
-    <h3>Samantha and her loudness</h3>
-    <p>Samantha Gorton, Sam, a VERY loud person who is impossible to get to shut up. If I were told to stop laughing I would stop, sit still for a moment, and burst out into an even louder more obnoxious laugh than before. See I like to live in the moment and if I am told stop living in the moment, I will not like it and continue to laugh in your face.<br />
-        <br>I like being the loudness, I like everyone hearing everything I have to say, and I like being the leader. I will voice my opinions and share the ways I think things should be done. Call me controlling, I dare you, because I will argue you on it.</br>
-        <br>Arguing. a <em> key </em> part of my personality. I love arguing people, I mean why wouldn't I? You can be loud with people and agree with them and then, just prove them wrong, and being right is an amazing feeling. </p>
-    <h3>Samantha and some interesting facts about her</h3>
-    <p>Samantha has alot of stories to tell. Samantha likes being the center of attention.</br>
-        <br><q>Samantha always likes being the center of attention</q> - Izzy</br>
-        <br>This one time Samantha was bored so she ate half a cantaloupe at 3:30 am, then proceeded to make a tinfoil tellitubby hat. The next night she became bored again so she ate a raw onion like an apple.</br>
-        <br><q> Samantha is quite fond of onions</q> - Izzy</br>
+    <h2 class="center">You, yes you, might ask, who is Samantha Gorton?</h2>
+    <h3 class="center">Samantha and her loudness</h3>
+    <p class="center">Samantha Gorton, Sam, a <em>VERY </em>loud person who is impossible to get to shut up
+        . If I were told to stop laughing I would stop, sit still for a moment, and burst
+        out into an even louder more obnoxious laugh than before. See I like to live in
+        the moment and if I am told stop living in the moment, I will not like it and
+        continue to laugh in your face.<br />
+        <br>I like being the loudness, I like everyone hearing everything I have to
+        say, and I like being the leader. I will voice my opinions and share the
+        ways I think things should be done. Call me controlling, I dare you, because
+        I will argue you on it.</br>
+        <br>Arguing. a <em> key </em> part of my personality. I love arguing people,
+        I mean why wouldn't I? You can be loud with people and agree with them and
+        then, just prove them wrong, and being right is an amazing feeling. </p>
+    <h3 class="center">Samantha and some interesting facts about her</h3>
+    <p class="center">Samantha has lots of stories to tell. Samantha likes being the center of attention.</br>
+        <br><q class="center">Samantha always likes being the center of attention</q> - Izzy</br>
+        <br>This one time Samantha was bored so she ate half a cantaloupe at 3:30 am,
+        then proceeded to make a tinfoil tellitubby hat. The next night she became
+        bored again so she ate a raw onion like an apple.</br>
+        <br><q class="center"> Samantha is quite fond of onions</q> - Izzy</br>
         <img class=img1 class="crop" src="images/me_on_the_pooldeck.png" />
         <img class=img2 src="images/my_parking.png" />
 </body>
 <nav class="menu">
-    <ul>
+    <ul class="center">
         <li><a href="background.html">Backround</a></li>
         <li><a href="hobbies.html">Hobbies</a></li>
         <li><a href="schedule.html">Schedule</a></li>
         <li><a href="favorites.html">Favoites</a></li>
+        <li><a href="secret.html"> , </a></li>
     </ul>
 </nav>
 <div id="footer">
