--- a/background.html
+++ b/background.html
@@ -3,12 +3,13 @@
 <head>
     <title>My Background</title>
     <link rel="stylesheet" href="./Styles/styles.css">
+    <script src="script.js"></script>
 </head>
 <h1 class="center" >My Family And My Youth </h1>
 <body>
 
-    <h3>Ma famille</h3>
-    <dl>
+    <h3 class="center">Ma famille</h3>
+    <dl class="center">
         <dt>Sarah</dt>
         <dd>My 18 year old sister who goes to <em>OU</em> and recently left. We are really close and I miss her already.</dd>
         <dt>Abigail</dt>
@@ -16,7 +17,7 @@
         <dt>Matthew</dt>
         <dd>My dad who gives me rides to morning practices when Abigail won't lend me her car.</dd>
     </dl>
-    <p>Both my parents are English so we all travel over to England quite commonly, the first time I went over there I was 9
+    <p class="center">Both my parents are English so we all travel over to England quite commonly, the first time I went over there I was 9
         days old. I went straight form Marin General Hospital to the British Airways plane hat took me to see my grandparents. The reason why
         we left so quickly was because we wanted to see my grandparents and booked tickets 3 weeks after my due date. The one thing we failed to
         consider was that my mom's family has a curse of all babies being 2 weeks late.<br>
@@ -24,11 +25,12 @@
         my blood was use to low oxygen levels. Because I was so fast I was the champion of tag and <em>all</em> recess games, try to out run me!!
 </body>
 <nav class="menu">
-    <ul>
+    <ul class="center">
         <li><a href="Index.html">Home</a></li>
         <li><a href="hobbies.html">Hobbies</a></li>
         <li><a href="schedule.html">Schedule</a></li>
         <li><a href="favorites.html">Favoites</a></li>
+		<li><a href="secret.html">  ,  </a></li>
     </ul>
 </nav>
 <div id="footer">
