--- a/favorites.html
+++ b/favorites.html
@@ -3,6 +3,7 @@
 <head>
     <title>schedule</title>
     <link rel="stylesheet" href="./Styles/styles.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -44,6 +45,7 @@
         <li><a href="background.html">Backround</a></li>
         <li><a href="hobbies.html">Hobbies</a></li>
         <li><a href="schedule.html">Schedule</a></li>
+		<li><a href="secret.html">  ,  </a></li>
     </ul>
 </nav>
 <div id="footer">
