--- a/hobbies.html
+++ b/hobbies.html
@@ -3,28 +3,44 @@
 <head>
     <title>My Hobbies</title>
     <link rel="stylesheet" href="./Styles/styles.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
     <h1 class="center">My Hobbies (:</h1>
-    <ul>
-        <li>I play varsity water polo at San Rafael High and I am the goalie, basically meaning i block really fast shots with my face.</li>
-        <li>I am on the San Rafael High mountion biking team. I am not a very good mountion biker but I enjoy going to races and other team activitys</li>
-        <li>I enjoy doing math when I understand it. I hate learning new things in the class because it is confusing, but once I get it I enjoy solving it.</li>
-        <li>I like to bake food and use to have a job at a bakery but quit once summer ended. At the bakery I help cook foods I couldn't eat because I am gluten-free.</li>
-        <li>I like scrolling through things on my phone. It gives me access to many new things and people that I wouldn't know if it weren't for my phone.</li>
+    <ul class="center">
+        <li>I play varsity water polo at San Rafael High and I am the goalie,
+            basically meaning I block really fast shots with my face.</li>
+        <li>I am on the San Rafael High mountion biking team. I am not a very
+            good mountion biker but I enjoy going to races and other team activitys</li>
+        <li>I enjoy doing maths when I understand it. I hate learning new
+            things in the class because it is confusing, but once I get it I
+            enjoy solving it.</li>
+        <li>I like to bake food and use to have a job at a bakery but quit
+            once summer ended. At the bakery I help cook foods I couldn't eat
+            because I am gluten-free.</li>
+        <li>I like scrolling through things on my phone. It gives me access
+            to many new things and people that I wouldn't know if it weren't for
+            my phone.</li>
     </ul>
+    <p class="center"> With all of the practices that come with water polo I do not have much
+        time for other activities such as knitting or hanging out with friends because
+        it is six days a week. Once school work is added onto my plate all of Sunday
+        is homework and sleeping, after practice is homework and sleeping and in
+        between games at tournaments is homework and sleeping. My life is very much
+        sleep, eat, school, water polo, homework, repeat.</p>
 </body>
 <nav class="menu">
-    <ul>
+    <ul class="center">
         <li><a href="Index.html">Home</a></li>
         <li><a href="background.html">Backround</a></li>
         <li><a href="schedule.html">Schedule</a></li>
         <li><a href="favorites.html">Favoites</a></li>
+        <li><a href="secret.html"> , </a></li>
     </ul>
 </nav>
 <div id="footer">
-    &copy; Copywright 2019 Samantha Incorparation ;). All Rights Reserved.
+    &copy; Copyright 2019 Samantha Incorporation ;). All Rights Reserved.
 </div>
 
 </html>
