--- a/schedule.html
+++ b/schedule.html
@@ -3,11 +3,12 @@
 <head>
     <title>schedule</title>
     <link rel="stylesheet" href="./Styles/styles.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
     <h1 class="center">My Schedule</h1>
-    <table>
+    <table align="center">
         <colgroup span="My Schedule"></colgroup>
         <tr>
             <th>Period</th>
@@ -52,11 +53,12 @@
     </table>
 </body>
 <nav class="menu">
-    <ul>
+    <ul class="center">
         <li><a href="Index.html">Home</a></li>
         <li><a href="background.html">Backround</a></li>
         <li><a href="hobbies.html">Hobbies</a></li>
         <li><a href="favorites.html">Favoites</a></li>
+        <li><a href="secret.html"> , </a></li>
     </ul>
 </nav>
 <div id="footer">
